fixed spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .content-container {
-    @apply w-full px-8 pt-[7.5rem] lg:w-[1000px] lg:px-0 flex flex-col;
+    @apply px-2 pt-[6.2rem] w-[80%] lg:w-[1000px] lg:px-8 flex flex-col;
   }
 
   .clickable {
@@ -37,7 +37,7 @@ section {
 }
 
 h1 {
-  @apply font-bold text-6xl text-black leading-[4rem];
+  @apply font-bold lg:text-6xl text-4xl text-black lg:leading-[4rem];
 }
 
 h2 {
